Born digital synchronisation

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Asset/Index.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Asset/Index.cshtml
@@ -170,6 +170,8 @@
         <h2>IIIF Image</h2>
         <div id="osd" style="width:100%; height: 500px; border: 1px solid gray;"></div>
     }
+    
+    <!-- TODO - but needs https://github.com/dlcs/protagonist/issues/488 - show audio, video tags etc -->
 
 
     if (Model.Thumbnails.HasItems())
