--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Fixtures/SheetFixtures.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Fixtures/SheetFixtures.cshtml
@@ -33,7 +33,8 @@
         }
         else if(dict["Level"] == "Item")
         {
-            var identifier = new DdsIdentifier(dict["PublicRef"]);
+            var altForm = dict["PublicRef"].ReplaceFirst("/", "");
+            var identifier = new DdsIdentifier(altForm);
             <tr>
                 <td>@Html.ActionLink(identifier.PackageIdentifier, "Manifestation", "Dash", new { id = identifier.PackageIdentifierPathElementSafe }, new { })</td>
                 <td>@dict["Extent"]</td>
