--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Job/Index.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Job/Index.cshtml
@@ -13,7 +13,7 @@
     <div class="alert alert-success" role="alert">
         <span class="glyphicon glyphicon-ok"></span>
         Regardless of the state of this particular job,
-        Manifestation @Html.ActionLink(manifestation, "Manifestation", "Dash", new {id = manifestation}, new {}) was updated as "success" by this or a subsequent job.
+        Manifestation @Html.ActionLink(manifestation, "Manifestation", "Dash", new {id = ((DdsIdentifier)manifestation).PathElementSafe}, new {}) was updated as "success" by this or a subsequent job.
         That doesn't mean that that the manifestation is <em>still</em> a success.
     </div>
 }
